# nostril

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
nostril/: __init__.py  helpers.py  ng.py  nonsense_detector.py
tests/: test.py
