[project]
name = "Nostril"
version = "1.2.0"
description = "Nonsense String Evaluator"
authors = [{ email = "Michael Hucka <mhucka@caltech.edu>" }]
license = { text = "GNU Lesser General Public License, version 2.1" }
urls = { repository = "https://github.com/LewisW/nostril" }
readme = "README.md"
dependencies = ["msgspec ~= 0.18.6"]

exclude = ["tests"]

[options]
packages = "nostril"
scripts = "bin/nostril"

[tool.setuptools.package-data]
nostril = "ngram_data.mpk"

[tool.mypy]
exclude = "tests"

[build-system]
requires = ["setuptools", "mypy"]
build-backend = "setuptools.build_meta"