[project]
name = "Nostril"
version = "1.2.0"
description = "Nonsense String Evaluator"
authors = [{ email = "Michael Hucka <mhucka@caltech.edu>" }]
license = { text = "GNU Lesser General Public License, version 2.1" }
urls = { repository = "https://github.com/LewisW/nostril" }
readme = "README.md"
dependencies = ["msgspec ~= 0.18.6"]
keywords = ['program-analysis text-processing gibberish-detection identifiers']
requires-python = '>=3'

[options]
packages = "nostril"
scripts = "bin/nostril"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.package-data]
nostril = ["ngram_data.mpk", "py.typed"]

[tool.mypy]
exclude = ["tests"]

[build-system]
requires = ["setuptools", "mypy"]
build-backend = "setuptools.build_meta"